# appset

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  meson.build  pipanel.pc.in
data/: Makefile  Makefile.am  Makefile.in  meson.build  pipanel.desktop  pipanel.desktop.in  pipanel.ui  pipanel.ui.h
debian/: changelog  control  copyright  files  gbp.conf  pipanel.install  pipanel.lintian-overrides  pipanel.substvars
po/: LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  de.po  en_GB.po  en_GB.pot  hy.po  is.po  it.po  ja.po  ko.po  nb.po  pipanel.pot  pt_BR.po  sk.po  zh_CN.po  zh_TW.po
src/: Makefile  Makefile.am  Makefile.in  defaults.c  defaults.h  desktop.c  desktop.h  labwc.c  labwc.h  meson.build  pipanel.c  pipanel.h  system.c  system.h  taskbar.c  taskbar.h  wm.c
